--- a/app/src/main/res/layout/fragment_contentclick.xml
+++ b/app/src/main/res/layout/fragment_contentclick.xml
@@ -15,22 +15,26 @@
 
             <TextView
                 android:id="@+id/contenttitle"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
                 android:fontFamily="@font/inter_bold"
-                android:gravity="center"
-                android:text="title"
+                android:gravity="center_vertical"
+                android:text="titlesdfasdfasdfasfasfdsafsadfadsfasdfasdfdsafasdf"
                 android:textSize="30dp"
                 android:textColor="@color/black"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/contentset"
                 android:layout_width="70dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="10dp"
-                android:text="모양 수정"
+                android:layout_margin="15dp"
+                android:text="수정"
                 android:visibility="invisible"
+                android:background="@drawable/button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
