--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="food_color">#59CE8F</color>
     <color name="sub_color">#E8F9FD</color>
     <color name="gray">#A5A5A5</color>
-    <color name="lightgray">#C8C8C8</color>
+    <color name="lightgray">#D6D7D7</color>
 </resources>
