--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/gray"/> <!-- 버튼의 배경색 -->
+            <solid android:color="@color/lightgray"/> <!-- 버튼의 배경색 -->
         </shape>
     </item>
 </selector>
