--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -29,46 +29,51 @@
                 android:background="@color/black"
                 android:orientation="horizontal" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginHorizontal="10dp"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/workname"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_weight="1"
+                    android:textSize="15dp"
+                    android:hint="운동을 적어주세요" />
 
-                    <EditText
-                        android:id="@+id/workname"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="100dp"
-                        android:hint="운동을 적어주세요" />
+                <EditText
+                    android:id="@+id/weight"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:hint="무게"
+                    android:textSize="15dp"
+                    android:textAlignment="center" />
 
-                    <EditText
-                        android:id="@+id/weight"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="100dp"
-                        android:hint="무게" />
+                <EditText
+                    android:id="@+id/workrepeat"
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:textSize="15dp"
+                    android:hint="반복횟수"
+                    android:textAlignment="center" />
 
-                    <EditText
-                        android:id="@+id/workrepeat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="100dp"
-                        android:hint="반복횟수" />
+                <Button
+                    android:id="@+id/plusBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/workout_color"
+                    android:hint="추가"
+                    android:textColorHint="@color/white" />
 
-                    <Button
-                        android:id="@+id/plusBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="100dp"
-                        android:backgroundTint="@color/workout_color"
-                        android:hint="추가"
-                        android:textColorHint="@color/white" />
-
-                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
